adding endpoint dockerfile etc
