# src/score-service/api_spec.yaml
@@ -41,13 +41,41 @@ paths:
                   scores:
                     type: object
 
+  /get_position:
+    get:
+      operationId: endpoints.get_position
+      summary: Get the position of a score
+      parameters:
+      - name: score
+        in: query
+        required: true
+        schema:
+          type: integer
+      - name: level
+        in: query
+        required: true
+        schema:
+          type: integer
+          minimum: 0
+          maximum: 2
+      responses:
+        '200':
+          description: Ok
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  position:
+                    type: integer
+
   /save_score:
     post:
       operationId: endpoints.save_score
       summary: Save a score
       parameters:
       - name: score
-        in: path
+        in: query
         required: true
         schema:
           type: integer
@@ -59,7 +87,7 @@ paths:
           minimum: 0
           maximum: 2
       - name: name
-        in: path
+        in: query
         required: true
         schema:
           type: string
